--- a/src/css/index.css
+++ b/src/css/index.css
@@ -125,7 +125,11 @@ header {
 }
 
 .contact-card .icon-card{
-  float: left;
+  float: right;
+}
+
+.contact-card:hover{
+  box-shadow: 5px 5px 3px rgba(5,5,5,.1);
 }
 
 
@@ -165,6 +169,8 @@ header {
 }
   .modal-content {
     display:block;
+    justify-items: center;
+    align-content: center;
     background-color: #fff;
     margin:80px auto;
     padding:0;
@@ -182,6 +188,76 @@ header {
     text-align:center;
 }
 
+.modal-short-info {
+  margin:0 10px;
+  padding: 10px 0;
+  box-sizing:border-box;
+  border-bottom: 1px solid #5e5e5b;
+  flex-wrap: nowrap;
+  min-width: 325px;
+}
+
+#mAvatar {
+  position:relative;
+  float:left;
+  margin:10px;
+}
+
+.mIcons {
+  display:block;
+  position:relative;
+  margin-top: 10px;
+}
+
+.modal-short-info span{
+  box-sizing: border-box;
+  margin:0;
+  line-height: 27px;
+  display:flex;
+  font-size:15pt;
+  font-weight: 900;
+  color: #5e5e5b;
+}
+
+.modal-short-info p {
+  position: relative;
+  color:#000;
+  font-weight: 300;
+  margin-left:5px;
+}
+
+.modal-content .mIcons button {
+  flex-wrap: nowrap;
+  margin:0 10px;
+  background: transparent;
+  border: none;
+  transition: 0.2s;
+}
+
+  .mIcons button:hover {
+      transition: 0.3s;
+      transform: scale(1.1);
+      cursor: pointer;
+  }
+
+.modal-contact-info {
+  box-sizing: border-box;
+  margin:10px;
+  justify-content: center;
+}
+
+.modal-contact-info span{
+  font-size:15pt;
+  font-weight: 900;
+  color: #5e5e5b;
+}
+
+.modal-contact-info p {
+  color:#000;
+  font-weight: 300;
+  font-size:15pt;
+}
+
 @keyframes modalopen {
   from{opacity: 0}
   to{opacity: 1}
@@ -190,3 +266,7 @@ header {
 
 
 /*FORMULÁRIO*/
+
+.contact-form {
+  display:none;
+}
