--- a/src/css/index.css
+++ b/src/css/index.css
@@ -178,6 +178,9 @@ header {
     animation-name: modalopen;
     animation-duration: 0.7s;
   }
+  .modal-contact {
+    display:none;
+  }
 
   .modal-header{
     background-color: #400080;
@@ -267,6 +270,83 @@ header {
 
 /*FORMULÁRIO*/
 
-.contact-form {
+#modal-form {
   display:none;
+}
+
+.contact-form {
+  max-width: 640px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 10px;
+}
+
+.contact-form label, input, select{
+  display:block;
+  float: left;
+  margin-bottom: 10px;
+}
+.contact-form #fFavorite {
+  float:left;
+  width: 5%;
+}
+
+.contact-form input {
+  position: relative;
+  border-radius: 20px;
+  width: 70%;
+  height: 30px;
+  padding: 10px;
+  font-size: 15px;
+  border: 1px solid #c0c0c0;
+}
+
+.contact-form #btConfirm {
+  position: relative;
+  margin: 10px 15%;
+}
+
+.contact-form select {
+  position: relative;
+  border: 1px solid #c0c0c0;
+  height: 20px;
+  font-size: 15px;
+  margin-bottom: 10px;
+  margin-top: 0;
+}
+
+.contact-form textarea {
+  font-family: 'PT Sans Narrow', sans-serif;
+  position: relative;
+  float: right;
+  border-radius: 15px;
+  font-size: 18px;
+  padding: 5px;
+  width: 90%;
+  height: 80px;
+  margin: 0 10px;
+}
+
+.contact-form label {
+  text-align: left;
+  width: 105px;
+  padding-right: 20px;
+  padding-bottom: 10px;
+}
+
+.contact-form fieldset {
+  position: relative;
+  width: 80%;
+  margin:10px auto;
+  padding: 10px;
+  text-align: center;
+}
+
+.contact-form select {
+  position: relative;
+  margin: 10px auto;
+}
+
+.contact-form  br {
+  clear: left;
 }
