--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,5 +1,45 @@
 @charset "UTF-8";
 
+@media only screen and (max-width: 720px){
+  #search {
+    flex-wrap: nowrap;
+    display: flex;
+  }
+    #search img {
+      padding: 0;
+    }
+  .modal-short-info {
+    flex-wrap: flex;
+    position: relative;
+    font-size: 1.2 em;
+  }
+  
+  .card-header:hover {
+    transition: 1s;
+    background-color: rgb(109, 109, 109);
+  }
+
+  .modal-contact-info span {
+    box-sizing: border-box;
+    margin:0;
+    line-height: 26px;
+    display: unset;
+    font-size: 15pt;
+    font-weight: 900;
+    color: #5e5e5b;
+    
+  }
+  .modal-short-info p {
+    display: contents;
+    position: relative;
+    color:#000;
+    font-weight: 300;
+    margin-left:5px;
+    word-break: break-word;
+  }
+
+}
+/*==============================================================*/
 * {
   padding: 0;
   margin: 0;
@@ -13,6 +53,7 @@ body {
 header {
   position:fixed;
   width: 100%;
+  max-height: 60px;
   box-sizing: border-box;
   background-color: #555555;
   display:block;
@@ -21,14 +62,15 @@ header {
   z-index:3;
 }
 
-#menu{
+#menu {
   position:relative;
   display:flex;
 }
 
 #search {
-  position:relative;
+  float: right;
   width: 300px;
+  max-height: 45px;
   margin-right: 10px;
   border: solid 1px;
   border-radius: 15px;
@@ -37,15 +79,15 @@ header {
   margin:0 10px;
 }
   #search input {
-      float:left;
-      width: 240px;
-      height: 32px;
-      padding-left: 10px;
-      color: #000;
-      font-size: 12pt;
-      border: none;
-      background-color: transparent;
-      margin:3px;
+    float:left;
+    width: 240px;
+    height: 32px;
+    padding-left: 10px;
+    color: #000;
+    font-size: 12pt;
+    border: none;
+    background-color: transparent;
+    margin:3px;
   }
 
   #search button {
@@ -64,22 +106,25 @@ header {
   }
 
 #menuButtons {
+  float: left;
+  display: block;
   position:relative;
-  display:block;
+  font-size: 17pt;
+  font-weight: 900;
+  color:#e1e1e1;
+  background-color: #555555;
+  padding: 5px 0;
+  transition: 0.4s;
 }
   #menuButtons a {
-    display:inline-block;
-    font-size: 17pt;
-    font-weight: 900;
-    color:#e1e1e1;
-    box-sizing: border-box;
-    margin: 5px 10px;
+    position:relative;
     cursor: pointer;
     transition:0.3s;
+    padding: 0px 5px;
   }
 
   #menuButtons a:hover {
-    text-shadow: 0px 0px 1px #fff;
+    background-color: 0px 0px 1px rgba(186, 102, 219, 0.815);
   }
 
   #container {
@@ -214,7 +259,6 @@ header {
   box-sizing:border-box;
   border-bottom: 1px solid #5e5e5b;
   flex-wrap: nowrap;
-  min-width: 325px;
 }
 
 #mAvatar {
@@ -231,8 +275,6 @@ header {
   margin-top: 10px;
 }
 
-
-
 .modal-short-info span{
   box-sizing: border-box;
   margin:0;
@@ -241,6 +283,7 @@ header {
   font-size:15pt;
   font-weight: 900;
   color: #5e5e5b;
+  word-break: break-word;
 }
 
 .modal-short-info p {
