--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,9 +1,22 @@
 @charset "UTF-8";
 
 @media only screen and (max-width: 720px){
+   .menu{
+    margin-top: 5px;
+    margin-left: -100%;
+    transition: all .4s;
+    }
+
+  #menu {
+    position: relative;
+    display:flex;
+  }
   #search {
     flex-wrap: nowrap;
     display: flex;
+    margin:0 auto !important;
+    position:relative;
+    float: right;
   }
     #search img {
       padding: 0;
@@ -12,11 +25,6 @@
     flex-wrap: flex;
     position: relative;
     font-size: 1.2 em;
-  }
-  
-  .card-header:hover {
-    transition: 1s;
-    background-color: rgb(109, 109, 109);
   }
 
   .modal-contact-info span {
@@ -39,7 +47,7 @@
   }
 
 }
-/*==============================================================*/
+/*==============================FIM RESPONSIVO================================*/
 * {
   padding: 0;
   margin: 0;
@@ -56,19 +64,21 @@ header {
   max-height: 60px;
   box-sizing: border-box;
   background-color: #555555;
-  display:block;
+  display:flex;
   flex-wrap: nowrap;
   padding: 10px;
   z-index:3;
 }
 
-#menu {
-  position:relative;
-  display:flex;
+#btToggle {
+  background-color: transparent;
+  border:none;
+  font-size: 25pt;
+  color: #fff;
+  cursor: pointer;
 }
 
 #search {
-  float: right;
   width: 300px;
   max-height: 45px;
   margin-right: 10px;
@@ -77,6 +87,9 @@ header {
   background-color: #e1e1e1;
   box-sizing: border-box;
   margin:0 10px;
+  position: relative;
+  display:flex;
+  margin: 0  10px 0 30px;
 }
   #search input {
     float:left;
@@ -105,31 +118,43 @@ header {
     padding: 5px;
   }
 
-#menuButtons {
-  float: left;
-  display: block;
-  position:relative;
-  font-size: 17pt;
-  font-weight: 900;
-  color:#e1e1e1;
-  background-color: #555555;
-  padding: 5px 0;
-  transition: 0.4s;
-}
-  #menuButtons a {
-    position:relative;
-    cursor: pointer;
-    transition:0.3s;
-    padding: 0px 5px;
-  }
-
-  #menuButtons a:hover {
-    background-color: 0px 0px 1px rgba(186, 102, 219, 0.815);
-  }
-
   #container {
     padding-top: 60px;
+    transition: margin-left 0.7s;
+    overflow: hidden;
   }
+
+  #menuButtons {
+    position: fixed;
+    height: 100%;
+    width: 0;
+    z-index: 1;
+    top:0;
+    left:0;
+    background-color: #555555;
+    overflow-x: hidden;
+    padding-top: 60px;
+    transition: 0.7s;
+    flex-wrap: nowrap;
+  }
+
+  #menuButtons a {
+    
+    display: block;
+    position: relative;
+    cursor: pointer;
+    transition: 0.3s;
+    padding: 10px 30px;
+    color:#fff;
+    font-size: 17pt;
+  }
+
+  #menuButtons  a:hover {
+    text-shadow: 0px 0px 3px #fff;
+    border-left: 4px solid #ffff35;
+    background-color: #353535;
+    transition: 0.1s;
+}
 
 #contactList {
   justify-content: center;
@@ -139,7 +164,7 @@ header {
   flex-wrap: wrap;
   box-sizing: border-box;
   width: 100%;
-  min-height: 100vh;
+  min-height: 150vh;
 }
   #contacList div {
     display:block;
@@ -154,7 +179,7 @@ header {
     margin: 20px auto;
     box-sizing: border-box;
     width: 380px;
-    min-width: 320px;
+    min-width: 350px;
     height: 150px;
     background-color: #fff;
     border: 1px solid #c0c0c0;
@@ -199,7 +224,7 @@ header {
   text-align: center;
   position: relative;
   display:block;
-  margin: 20px auto;
+  margin: 20px 20px;
   line-height: 2.1em;
   
 }
